# tcinter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  _tkinter.c  conanfile.txt  pyproject.toml  setup.py  tkinter.h
scripts/: docker-wheels.sh
src/tcinter/: __main__.py  interp.py
