[project]
name = "tcinter"
version = "0.0.2"
authors = [
  {name="Claudio M. Perez"}
  # <50180406+claudioperez@users.noreply.github.com>"
]

license = {file = "LICENSE"}

readme = "README.md"

description = "."

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

keywords = [
] 

dependencies = [
]

[project.optional-dependencies]
testing = [
]

docs = [
]

[project.urls]
Repository = "http://github.com/claudioperez/tcinter"

[build-system]
requires = [
    "amoeba-build >= 0.0.9",
    "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["libg3*"]

